deploy.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: node-specific-sizing
  namespace: kube-system
subsets:
- addresses:
  - ip: 172.19.0.1
  ports:
  - port: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: node-specific-sizing
  namespace: kube-system
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-specific-sizing
  name: node-specific-sizing
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-specific-sizing
  template:
    metadata:
      labels:
        app: node-specific-sizing
    spec:
      containers:
      - env:
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: node-specific-sizing:latest
        imagePullPolicy: IfNotPresent
        name: node-specific-sizing
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      serviceAccountName: node-specific-sizing
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: node-specific-sizing-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kube-system/node-specific-sizing-client-cert
  name: node-specific-sizing
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: node-specific-sizing
      namespace: kube-system
      path: /mutate
  failurePolicy: Ignore
  name: node-specific-sizing.svc.cluster.local
  objectSelector:
    matchLabels:
      node-specific-sizing.manomano.tech/enabled: "true"
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 2
